--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <article id="nosotros">
       <div class="nosotros-contenido">
-        <img src="src/calle_1.png" alt="La candelaria, Bogotá" class="img-nosotros">
+        <img src="imagenes/src/calle_1.png" alt="La candelaria, Bogotá" class="img-nosotros">
       
         <div class="texto-nosotros">
         <h2>VENGA LE CONTAMOS SOBRE NOSOTROS</h2>
@@ -118,7 +118,7 @@
 
     <article id="separador">
       <div class="imagen-hover">
-        <img src="src/hamburguesa.jpg" alt="Hamburguesa">
+        <img src="imagenes/src/hamburguesa.jpg" alt="Hamburguesa">
       </div>
     </article>
 
@@ -138,16 +138,16 @@
 
   <div class="carrusel__inner">
     <div class="carrusel__slide">
-      <img src="src/img1.jpg" alt="Imagen 1" />
+      <img src="imagenes/src/img1.jpg" alt="Imagen 1" />
     </div>
     <div class="carrusel__slide">
-      <img src="src/img2.jpg" alt="Imagen 2" />
+      <img src="imagenes/src/img2.jpg" alt="Imagen 2" />
     </div>
     <div class="carrusel__slide">
-      <img src="src/img3.jpg" alt="Imagen 3" />
+      <img src="imagenes/src/img3.jpg" alt="Imagen 3" />
     </div>
     <div class="carrusel__slide">
-      <img src="src/img4.jpg" alt="Imagen 4" />
+      <img src="imagenes/src/img4.jpg" alt="Imagen 4" />
     </div>
   </div>
 
